[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Eruja Michael <michaeleruja@gmail.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
